--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -14,13 +14,6 @@
   src: url(../fonts/samim/Farsi-Digits/Samim-FD.eot) format("embedded-opentype"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff2) format("woff2"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff) format("woff"), url(../fonts/samim/Farsi-Digits/Samim-FD.ttf) format("truetype");
 }
 
-@font-face {
-  font-family: Vazir;
-  font-style: normal;
-  src: url(../fonts/Vazir/Vazir.eot);
-  src: url(../fonts/Vazir/Vazir.eot) format("embedded-opentype"), url(../fonts/Vazir/Vazir.woff2) format("woff2"), url(../fonts/Vazir/Vazir.woff) format("woff");
-}
-
 body {
   font-family: 'Samim';
   background-color: #fff;
@@ -28,6 +21,9 @@ body {
   direction: rtl;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-image: url("./../images/Banners.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 body a:focus {
@@ -43,6 +39,15 @@ section.shipping-time {
   height: 200px;
   padding: 2rem;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 section.shipping-time div.owl-dots {
