--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,10 @@ $color-font:#F4F9F9;
 $color-background:#faf6fb;
 $color-selected:#00bfd6;
 
+//dolatsara
+$color-purple : #4a1f61;
+$color-gray-4:#b8b8b8;
+
 body {
     font-family: 'Samim';
     background-color: $color-light;
