--- a/src/css/slider2.css
+++ b/src/css/slider2.css
@@ -77,6 +77,10 @@ section.dolatsara-slider-section div.dolatsara-slider {
   background-repeat: no-repeat;
 }
 
+section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper {
+  width: 80%;
+}
+
 section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide {
   -webkit-box-shadow: inset 0 0 4px #b8b8b8;
           box-shadow: inset 0 0 4px #b8b8b8;
