--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -29,6 +29,8 @@ section.dolatsara-slider-section {
     background-repeat: no-repeat;
 
     div.swiper.mySwiper {
+        width: 80%;
+
       div.swiper-wrapper {
         div.swiper-slide {
           box-shadow: inset 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
@@ -183,6 +185,7 @@ section.most-visited-slider {
 
     div.swiper.mySwiper2 {
       width: 70%;
+
       div.swiper-wrapper {
         flex-direction: row;
         align-items: center;
