--- a/src/css/mediaSlider2.css
+++ b/src/css/mediaSlider2.css
@@ -1,10 +1,41 @@
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  src: url(../fonts/IRANSansWeb/IRANSansWeb.eot);
+  src: url(../fonts/IRANSansWeb/IRANSansWeb.eot) format("embedded-opentype"), url(../fonts/IRANSansWeb/IRANSansWeb.woff2) format("woff2"), url(../fonts/IRANSansWeb/IRANSansWeb.woff) format("woff"), url(../fonts/IRANSansWeb/IRANSansWeb.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: Samim;
+  font-style: normal;
+  src: url(../fonts/samim/Samim.eot);
+  src: url(../fonts/samim/Samim.eot) format("embedded-opentype"), url(../fonts/samim/Samim.woff2) format("woff2"), url(../fonts/samim/Samim.woff) format("woff"), url(../fonts/samim/Samim.ttf) format("truetype");
+  src: url(../fonts/samim/Farsi-Digits/Samim-FD.eot);
+  src: url(../fonts/samim/Farsi-Digits/Samim-FD.eot) format("embedded-opentype"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff2) format("woff2"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff) format("woff"), url(../fonts/samim/Farsi-Digits/Samim-FD.ttf) format("truetype");
+}
+
+body {
+  font-family: 'Samim';
+  background-color: #fff;
+  font-size: 100%;
+  direction: rtl;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body a:focus {
+  outline: 0;
+}
+
+body .container-fluid {
+  padding: 0;
+  margin: 0;
+}
+
 @media (max-width: 991px) {
   section.dolatsara-slider-section {
     padding: 0 1rem;
     width: calc(100% - 2rem);
-  }
-  section.dolatsara-slider-section div.dolatsara-slider {
-    height: 70%;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide {
     height: -webkit-max-content;
@@ -26,7 +57,7 @@
     width: 150px;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide .slide-item-parent div.card-body-slider h4.item-slide__title {
-    padding: .5rem 0;
+    padding: 0.5rem 0;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide .slide-item-parent div.card-footer-slider {
     height: 50px;
@@ -45,10 +76,76 @@
     max-width: 120px;
     padding: 0.375rem 0;
   }
-  section.dolatsara-slider-section button.view-all {
-    padding: 0.375rem;
-    width: 100px;
-    margin-top: 2rem;
+  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
+    height: 150px;
+  }
+  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets {
+    display: block;
+  }
+  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets span.swiper-pagination-bullet-active {
+    background-color: #4a1f61;
+  }
+  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-button-prev,
+  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-button-next {
+    display: none;
+  }
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
+    height: 150px;
+  }
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .content-box div.code-name-advertising-box p.code-advertising,
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .content-box div.code-name-advertising-box p.name-advertising {
+    margin: 0.5rem 0;
+  }
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets {
+    display: block;
+  }
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets span.swiper-pagination-bullet-active {
+    background-color: #4a1f61;
+  }
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-button-prev,
+  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-button-next {
+    display: none;
+  }
+  section.album-slider .dolatsara-slider div.swiper {
+    width: 90%;
+  }
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next {
+    -webkit-transform: scale(1.025);
+            transform: scale(1.025);
+  }
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
+    -webkit-transform: scale(1.18);
+            transform: scale(1.18);
+  }
+}
+
+@media (max-width: 768px) {
+  section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide-prev,
+  section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide-next {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  section.dolatsara-slider-section div.dolatsara-slider div.swiper.mySwiper div.swiper-wrapper div.swiper-slide-active {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 /*# sourceMappingURL=mediaSlider2.css.map */
