--- a/src/scss/medias/mediaSlider2.scss
+++ b/src/scss/medias/mediaSlider2.scss
@@ -1,22 +1,23 @@
+@import "./../base";
+
 @media (max-width: 991px) {
   section.dolatsara-slider-section {
-      padding: 0 1rem;
-      width: calc(100% - 2rem);
-    div.dolatsara-slider {
-      height: 70%;
+    padding: 0 1rem;
+    width: calc(100% - 2rem);
 
+    div.dolatsara-slider {
       div.swiper.mySwiper {
         div.swiper-wrapper {
           div.swiper-slide {
-              height: max-content;
+            height: max-content;
 
             .slide-item-parent {
               padding: 1rem 2rem;
               height: max-content;
 
               div.card-body-slider {
-              margin: 0 1rem;
-              width: calc(100% - 2rem);
+                margin: 0 1rem;
+                width: calc(100% - 2rem);
 
                 .image-placeholder {
                   height: 120px;
@@ -27,7 +28,7 @@
                 }
 
                 h4.item-slide__title {
-                  padding: .5rem 0;
+                  padding: 0.5rem 0;
                 }
               }
 
@@ -64,15 +65,183 @@
 
         div.swiper-button-prev,
         div.swiper-button-next {
-        //   display: none;
+          //   display: none;
         }
       }
     }
+  }
 
-    button.view-all {
-      padding: 0.375rem;
-      width: 100px;
-      margin-top: 2rem;
+  section.several-row-slider {
+    h2.several-row-slider__title {
+    }
+
+    div.dolatsara-slider {
+      div.swiper {
+        div.swiper-wrapper {
+          div.swiper-slide {
+            .slide-item-parent {
+              .image-placeholder {
+                height: 150px;
+
+                img {
+                }
+              }
+
+              div.content-box {
+                h3.title-item {
+                }
+
+                div.code-name-advertising-box {
+                  p.code-advertising,
+                  p.name-advertising {
+                  }
+                }
+
+                div.card-footer-slider {
+                  p.home-advertising,
+                  p.location-advertising {
+                    svg.footer-icon {
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        div.swiper-pagination.swiper-pagination-bullets {
+          display: block;
+
+          span.swiper-pagination-bullet-active {
+            background-color: rgba($color: $color-purple, $alpha: 1);
+          }
+        }
+
+        div.swiper-button-prev,
+        div.swiper-button-next {
+          display: none;
+        }
+      }
+    }
+  }
+
+  section.single-row-slider {
+    h2.single-row-slider__title {
+      span {
+      }
+    }
+
+    div.dolatsara-slider {
+      div.swiper {
+        div.swiper-wrapper {
+          div.swiper-slide {
+            .slide-item-parent {
+              .image-placeholder {
+                height: 150px;
+
+                img {
+                }
+              }
+
+              .content-box {
+                h3.title-item {
+                }
+
+                div.code-name-advertising-box {
+                  p.code-advertising,
+                  p.name-advertising {
+                    margin: 0.5rem 0;
+                  }
+                }
+
+                div.card-footer-slider {
+                  p.home-advertising,
+                  p.location-advertising {
+                    svg.footer-icon {
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        div.swiper-pagination.swiper-pagination-bullets {
+          display: block;
+
+          span.swiper-pagination-bullet-active {
+            background-color: rgba($color: $color-purple, $alpha: 1);
+          }
+        }
+
+        div.swiper-button-prev,
+        div.swiper-button-next {
+          display: none;
+        }
+      }
+    }
+  }
+
+  section.album-slider {
+    .dolatsara-slider {
+      div.swiper {
+        width: 90%;
+
+        div.swiper-wrapper{
+          div.swiper-slide-prev,
+          div.swiper-slide-next {
+            transform: scale(1.025);
+          }
+  
+          div.swiper-slide-active {
+            transform: scale(1.18);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  section.dolatsara-slider-section {
+    div.dolatsara-slider {
+      div.swiper.mySwiper {
+        div.swiper-wrapper {
+          div.swiper-slide {
+            transform: scale(1);
+          }
+
+          div.swiper-slide-prev,
+          div.swiper-slide-next {
+            transform: scale(1);
+          }
+
+          div.swiper-slide-active {
+            transform: scale(1);
+          }
+        }
+      }
+    }
+  }
+
+  section.album-slider {
+    .dolatsara-slider {
+      div.swiper {
+        div.swiper-wrapper {
+          div.swiper-slide {
+            transform: scale(1);
+          }
+
+          div.swiper-slide-prev,
+          div.swiper-slide-next {
+            transform: scale(1);
+          }
+
+          div.swiper-slide-active {
+            transform: scale(1);
+          }
+        }
+      }
     }
   }
 }
