--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -1,22 +1,12 @@
 @import "./base";
 
-button.view-all {
-  background-color: $color-purple;
-  border: 0;
-  padding: 0.375rem;
-  border-radius: 4px;
-  color: rgba($color: $color-light, $alpha: 1);
-  width: 100px;
-  font-family: "Samim";
-}
-
 section.dolatsara-slider-section {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  margin: 2rem 0;
 
   div.dolatsara-slider {
     display: flex;
@@ -28,8 +18,8 @@ section.dolatsara-slider-section {
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
-    div.swiper.mySwiper {
-        width: 80%;
+    div.swiper {
+      width: 80%;
 
       div.swiper-wrapper {
         div.swiper-slide {
@@ -42,6 +32,7 @@ section.dolatsara-slider-section {
           );
           transition: all 0.3ms ease-in;
           transform: scale(0.75);
+          margin-top: 2rem;
 
           .slide-item-parent {
             padding: 1rem 2rem;
@@ -61,8 +52,8 @@ section.dolatsara-slider-section {
               .image-placeholder {
                 padding: 0.5rem 1rem;
                 border-radius: 0.5rem;
-                height: 150px;
-                width: 170px;
+                height: 120px;
+                width: 150px;
 
                 img {
                   border-radius: 0.5rem;
@@ -125,37 +116,18 @@ section.dolatsara-slider-section {
           transform: scale(1);
         }
       }
-
-      div.swiper-button-prev,
-      div.swiper-button-next {
-        background-color: rgba($color: $color-light, $alpha: 1);
-        box-shadow: 0 0 8px 2px rgba($color: $color-gray-3, $alpha: 0.5);
-        border-radius: 50%;
-        width: 35px;
-        height: 35px;
-        color: rgba($color: $color-purple, $alpha: 1);
-
-        &:after {
-          font-size: 24px;
-          font-weight: 900;
-        }
-      }
-
-      div.swiper-button-disabled {
-        color: rgba($color: $color-gray-2, $alpha: 1);
-        box-shadow: 0 0 8px 2px rgba($color: $color-gray-3, $alpha: 0.5);
-      }
     }
   }
 }
 
-section.most-visited-slider {
+section.several-row-slider {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  margin: 2rem 0;
+  // height: 100vh;
   background-image: linear-gradient(
       to bottom,
       transparent,
@@ -170,7 +142,7 @@ section.most-visited-slider {
   background-size: 100% 100%;
   background-repeat: no-repeat;
 
-  h2 {
+  h2.several-row-slider__title {
     font-weight: 600;
     font-size: 1.5rem;
   }
@@ -180,11 +152,10 @@ section.most-visited-slider {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    position: relative;
+    // height: 100%;
 
-    div.swiper.mySwiper2 {
-      width: 70%;
+    div.swiper {
+      width: 80%;
 
       div.swiper-wrapper {
         flex-direction: row;
@@ -218,9 +189,140 @@ section.most-visited-slider {
               }
             }
 
-            div.content-box {
-              padding: 1rem 2rem;
-              width: calc(100% - 4rem);
+            .content-box {
+              padding: 1rem;
+              width: calc(100% - 2rem);
+
+              h3.title-item {
+                font-weight: 600;
+                color: rgba($color: $color-dark, $alpha: 1);
+                text-align: center;
+                max-width: 100%;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                padding: 0.375rem 0;
+              }
+
+              div.code-name-advertising-box {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                border-bottom: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+                margin-top: 1rem;
+
+                p.code-advertising,
+                p.name-advertising {
+                  margin: 0.5rem 0;
+                  color: rgba($color: $color-gray-4, $alpha: 1);
+                  font-size: 80%;
+                }
+              }
+
+              div.card-footer-slider {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                margin: 1rem 0;
+
+                p.home-advertising,
+                p.location-advertising {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  color: rgba($color: $color-gray-4, $alpha: 1);
+                  background-color: rgba($color: $color-gray, $alpha: 1);
+                  border-radius: 8px;
+                  padding: 0.375rem;
+                  font-size: 80%;
+
+                  svg.footer-icon {
+                    margin-left: 0.375rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      div.swiper-pagination.swiper-pagination-bullets {
+        display: none;
+      }
+    }
+  }
+}
+
+section.single-row-slider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+
+  h2.single-row-slider__title {
+    width: 90%;
+    text-align: center;
+    border-bottom: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+    line-height: 0.1em;
+    margin: 10px 0 20px;
+    font-size: 1.5rem;
+    font-weight: 600;
+
+    span {
+      background: $color-light;
+      padding: 0 10px;
+    }
+  }
+
+  div.dolatsara-slider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    // height: 100%;
+
+    div.swiper {
+      width: 80%;
+
+      div.swiper-wrapper {
+        flex-direction: row;
+        align-items: center;
+
+        div.swiper-slide {
+          box-shadow: inset 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+          border-radius: 12px;
+          background-color: rgba($color: $color-light, $alpha: 1);
+          height: calc((100% - 30px) / 2);
+          margin-top: 30px;
+
+          .slide-item-parent {
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .image-placeholder {
+              border-top-right-radius: 0.5rem;
+              border-top-left-radius: 0.5rem;
+              height: 150px;
+              width: 100%;
+
+              img {
+                border-top-right-radius: 0.5rem;
+                border-top-left-radius: 0.5rem;
+                width: 100%;
+                height: 100%;
+              }
+            }
+
+            .content-box {
+              padding: 1rem;
+              width: calc(100% - 2rem);
 
               h3.title-item {
                 font-weight: 600;
@@ -280,26 +382,141 @@ section.most-visited-slider {
       div.swiper-pagination.swiper-pagination-bullets {
         display: none;
       }
+    }
+  }
+}
 
-      div.swiper-button-prev,
-      div.swiper-button-next {
-        background-color: rgba($color: $color-light, $alpha: 1);
-        box-shadow: 0 0 8px 2px rgba($color: $color-gray-3, $alpha: 0.5);
-        border-radius: 50%;
-        width: 35px;
-        height: 35px;
-        color: rgba($color: $color-purple, $alpha: 1);
+section.album-slider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+  background-image: url("./../images/polyganBg.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 
-        &:after {
-          font-size: 24px;
-          font-weight: 900;
+  .dolatsara-slider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    div.swiper {
+      padding: 3rem 0;
+      width: 80%;
+
+      div.swiper-wrapper {
+
+        div.swiper-slide {
+          box-shadow: 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+          border-radius: 12px;
+          background-color: rgba($color: $color-light, $alpha: 1);
+          transition: all 0.3ms ease-in;
+          transform: scale(1);
+          z-index: 10;
+          margin-top: 3rem;
+
+          .slide-item-parent {
+            height: 350px;
+            text-decoration: none;
+
+            .image-placeholder {
+              border-top-right-radius: 0.5rem;
+              border-top-left-radius: 0.5rem;
+              height: 200px;
+              width: 100%;
+
+              img {
+                border-top-right-radius: 0.5rem;
+                border-top-left-radius: 0.5rem;
+                width: 100%;
+                height: 100%;
+              }
+            }
+
+            .card-body-slider {
+              padding: 0.5rem 1rem;
+              height: 150px;
+
+              .card-body-child {
+                display: flex;
+                align-items: center;
+                justify-content:flex-start;
+                border-bottom: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+                padding: .5rem 0;
+
+                h3 {
+                  color: rgba($color: $color-purple, $alpha: 1);
+                  font-size: 1.15rem;
+                  max-width: 50%;
+                  white-space: nowrap;
+                  text-overflow: ellipsis;
+                  overflow: hidden;
+                  padding: 0.375rem 0;
+                  font-weight: 600;
+                  margin-left: .5rem;
+
+                }
+
+                p.title-article {
+                  color: rgba($color: $color-gray-4, $alpha: 1);
+                  font-size: 14px;
+                  max-width: 50%;
+                  white-space: nowrap;
+                  text-overflow: ellipsis;
+                  overflow: hidden;
+                  padding: 0.375rem 0;
+                }
+
+                .image-placeholder {
+                  border-radius: 50%;
+                  height: 45px;
+                  width: 50px;
+                  border: 1px solid rgba($color: $color-gray-4, $alpha: 0.5);
+                  margin-left: .5rem;
+
+                  img {
+                    border-radius: 50%;
+                    width: 100%;
+                    height: 100%;
+                  }
+                }
+              }
+
+              p {
+                color: rgba($color: $color-gray-4, $alpha: 1);
+                font-size: 90%;
+                margin-left: .5rem;
+                padding: .5rem 0;
+                line-height: 1.1;
+
+                small {
+                  font-size: 12px;
+                  font-weight: 500;
+                }
+              }
+            }
+          }
         }
-      }
 
-      div.swiper-button-disabled {
-        color: rgba($color: $color-gray-2, $alpha: 1);
-        box-shadow: 0 0 8px 2px rgba($color: $color-gray-3, $alpha: 0.5);
+        div.swiper-slide-prev,
+        div.swiper-slide-next {
+          transform: scale(1.07);
+          z-index: 100;
+
+        }
+
+        div.swiper-slide-active {
+          transform: scale(1.25);
+          z-index: 1000;
+          box-shadow: 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+
+        }
       }
     }
   }
 }
+
+
