--- a/src/css/mediaSlider2.css
+++ b/src/css/mediaSlider2.css
@@ -79,32 +79,12 @@ body .container-fluid {
   section.several-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
     height: 150px;
   }
-  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets {
-    display: block;
-  }
-  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets span.swiper-pagination-bullet-active {
-    background-color: #4a1f61;
-  }
-  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-button-prev,
-  section.several-row-slider div.dolatsara-slider div.swiper div.swiper-button-next {
-    display: none;
-  }
   section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
     height: 150px;
   }
   section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .content-box div.code-name-advertising-box p.code-advertising,
   section.single-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .content-box div.code-name-advertising-box p.name-advertising {
     margin: 0.5rem 0;
-  }
-  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets {
-    display: block;
-  }
-  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-pagination.swiper-pagination-bullets span.swiper-pagination-bullet-active {
-    background-color: #4a1f61;
-  }
-  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-button-prev,
-  section.single-row-slider div.dolatsara-slider div.swiper div.swiper-button-next {
-    display: none;
   }
   section.album-slider .dolatsara-slider div.swiper {
     width: 90%;
@@ -117,6 +97,9 @@ body .container-fluid {
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
     -webkit-transform: scale(1.18);
             transform: scale(1.18);
+  }
+  section.tab-navigation {
+    display: none;
   }
 }
 
