--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -21,6 +21,7 @@ body {
   direction: rtl;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding-top: 2rem;
 }
 
 body a:focus {
