--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -521,7 +521,6 @@ section.tab-navigation {
         text-overflow: ellipsis;
         overflow: hidden;
         padding: 0.375rem;
-
       }
 
       .tab-navigation__tab-btn.selected {
@@ -549,7 +548,7 @@ section.tab-navigation {
     border-top-right-radius: 0;
     box-shadow: 0 2px 4px rgba($color: $color-gray-4, $alpha: 1);
     display: none;
-    
+
     p {
       padding: 1rem;
       min-height: 30px;
@@ -559,4 +558,150 @@ section.tab-navigation {
 
 section.best-categorie-icon {
   display: none;
+}
+
+section.banner-box-section {
+  @include section-style;
+  margin-top: 0;
+  height: 300px;
+
+  .banner-content {
+    width: 100%;
+    height: 500px;
+    background-color: rgba($color: $color-gray, $alpha: 1);
+    background-image: url("./../images/banner-2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    margin-bottom: 100px;
+
+    .grid-boxes-section {
+      width: 90%;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      background-color: rgba($color: $color-dark, $alpha: 0.15);
+      border-radius: 8px;
+      position: absolute;
+      bottom: -100px;
+
+      .single-box {
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:first-child {
+          border-top-right-radius: 8px;
+        }
+        &:last-child {
+          border-bottom-left-radius: 8px;
+        }
+
+        &:nth-child(5) {
+          border-top-left-radius: 8px;
+        }
+
+        &:nth-child(6) {
+          border-bottom-right-radius: 8px;
+        }
+
+        &:nth-child(2n) {
+          background-color: rgba($color: $color-gray-4, $alpha: 0.5);
+        }
+
+        &:nth-child(2n-1) {
+          background-color: rgba($color: $color-gray, $alpha: 0.5);
+        }
+
+        &:nth-child(3n) {
+          background-color: rgba($color: $color-purple, $alpha: 0.5);
+        }
+
+        p.box-title {
+          color: rgba($color: $color-font, $alpha: 1);
+          text-shadow: 0 -2px rgba($color: $color-dark, $alpha: 0.2);
+        }
+      }
+    }
+  }
+}
+
+section.dropdown-section {
+  @include section-style;
+  align-items: flex-start;
+
+  .dropdown-section__button-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 150px;
+    color: rgba($color: $color-gray-4, $alpha: 1);
+    background: rgba($color: $color-gray, $alpha: 1);
+    border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+    border-radius: 8px;
+    padding: .375rem;
+    margin-right: 4rem;
+
+    button.dropdown-section-button {
+      background: transparent;
+      // padding: .375rem;
+      font-family: 'Samim';
+      border: 0;
+      width: 100%;
+      color: rgba($color: $color-gray-4, $alpha: 1);
+    }
+
+    svg {
+      font-size: 24px;
+    }
+  }
+
+
+  ul.dropdown-section__list {
+    flex-direction: column;
+    width: 150px;
+    transition: display .3s ease-in;
+    margin-right: 4rem;
+    
+    
+    li.dropdown-section__list-item {
+      background-color: rgba($color: $color-gray, $alpha: 1);
+      padding: 1rem;
+      width: 100%;
+      max-width: 100%;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      padding: 0.375rem;
+      
+      &:first-child{
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+      }
+      &:last-child{
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+      }
+
+      &:hover {
+        background-color: rgba($color: $color-purple, $alpha: 0.5);
+      }
+
+      &:hover>a.dropdown-section__list-item-link  {
+        color: rgba($color: $color-light, $alpha: 1);
+      }
+
+      a.dropdown-section__list-item-link {
+        text-decoration: none;
+        width: 100%;
+        text-align: center;
+        color: rgba($color: $color-dark, $alpha: 1);
+      }
+    }
+  }
 }
