--- a/src/css/slider2.css
+++ b/src/css/slider2.css
@@ -791,16 +791,11 @@ section.banner-box-section {
   width: 100%;
   margin: 2rem 0;
   margin-top: 0;
-  height: 300px;
 }
 
-section.banner-box-section .banner-content {
+.banner-content {
+  height: 200px;
   width: 100%;
-  height: 500px;
-  background-color: #eeeeee;
-  background-image: url("./../images/banner-2.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -818,7 +813,7 @@ section.banner-box-section .banner-content {
   margin-bottom: 100px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section {
+.banner-content .grid-boxes-section {
   width: 90%;
   display: -ms-grid;
   display: grid;
@@ -832,7 +827,7 @@ section.banner-box-section .banner-content .grid-boxes-section {
   bottom: -100px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box {
+.banner-content .grid-boxes-section .single-box {
   height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -845,35 +840,35 @@ section.banner-box-section .banner-content .grid-boxes-section .single-box {
           justify-content: center;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:first-child {
+.banner-content .grid-boxes-section .single-box:first-child {
   border-top-right-radius: 8px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:last-child {
+.banner-content .grid-boxes-section .single-box:last-child {
   border-bottom-left-radius: 8px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:nth-child(5) {
+.banner-content .grid-boxes-section .single-box:nth-child(5) {
   border-top-left-radius: 8px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:nth-child(6) {
+.banner-content .grid-boxes-section .single-box:nth-child(6) {
   border-bottom-right-radius: 8px;
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:nth-child(2n) {
+.banner-content .grid-boxes-section .single-box:nth-child(2n) {
   background-color: rgba(184, 184, 184, 0.5);
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:nth-child(2n-1) {
+.banner-content .grid-boxes-section .single-box:nth-child(2n-1) {
   background-color: rgba(238, 238, 238, 0.5);
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box:nth-child(3n) {
+.banner-content .grid-boxes-section .single-box:nth-child(3n) {
   background-color: rgba(74, 31, 97, 0.5);
 }
 
-section.banner-box-section .banner-content .grid-boxes-section .single-box p.box-title {
+.banner-content .grid-boxes-section .single-box p.box-title {
   color: #f4f9f9;
   text-shadow: 0 -2px rgba(0, 0, 0, 0.2);
 }
@@ -914,13 +909,13 @@ section.dropdown-section .dropdown-section__button-box {
   background: #eeeeee;
   border: 1px solid #b8b8b8;
   border-radius: 8px;
-  padding: .375rem;
+  padding: 0.375rem;
   margin-right: 4rem;
 }
 
 section.dropdown-section .dropdown-section__button-box button.dropdown-section-button {
   background: transparent;
-  font-family: 'Samim';
+  font-family: "Samim";
   border: 0;
   width: 100%;
   color: #b8b8b8;
@@ -936,8 +931,8 @@ section.dropdown-section ul.dropdown-section__list {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 150px;
-  -webkit-transition: display .3s ease-in;
-  transition: display .3s ease-in;
+  -webkit-transition: display 0.3s ease-in;
+  transition: display 0.3s ease-in;
   margin-right: 4rem;
 }
 
