--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -563,74 +563,72 @@ section.best-categorie-icon {
 section.banner-box-section {
   @include section-style;
   margin-top: 0;
-  height: 300px;
+}
 
-  .banner-content {
-    width: 100%;
-    height: 500px;
-    background-color: rgba($color: $color-gray, $alpha: 1);
-    background-image: url("./../images/banner-2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    align-items: center;
-    margin-bottom: 100px;
+.banner-content {
+  height: 200px;
+  width: 100%;
+  // background-color: rgba($color: $color-gray, $alpha: 1);
+  // background-image: url("./../images/banner-2.jpg");
+  // background-repeat: no-repeat;
+  // background-size: 100% 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  margin-bottom: 100px;
 
-    .grid-boxes-section {
-      width: 90%;
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      background-color: rgba($color: $color-dark, $alpha: 0.15);
-      border-radius: 8px;
-      position: absolute;
-      bottom: -100px;
+  .grid-boxes-section {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    background-color: rgba($color: $color-dark, $alpha: 0.15);
+    border-radius: 8px;
+    position: absolute;
+    bottom: -100px;
 
-      .single-box {
-        height: 100px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .single-box {
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-        &:first-child {
-          border-top-right-radius: 8px;
-        }
-        &:last-child {
-          border-bottom-left-radius: 8px;
-        }
+      &:first-child {
+        border-top-right-radius: 8px;
+      }
+      &:last-child {
+        border-bottom-left-radius: 8px;
+      }
 
-        &:nth-child(5) {
-          border-top-left-radius: 8px;
-        }
+      &:nth-child(5) {
+        border-top-left-radius: 8px;
+      }
 
-        &:nth-child(6) {
-          border-bottom-right-radius: 8px;
-        }
+      &:nth-child(6) {
+        border-bottom-right-radius: 8px;
+      }
 
-        &:nth-child(2n) {
-          background-color: rgba($color: $color-gray-4, $alpha: 0.5);
-        }
+      &:nth-child(2n) {
+        background-color: rgba($color: $color-gray-4, $alpha: 0.5);
+      }
 
-        &:nth-child(2n-1) {
-          background-color: rgba($color: $color-gray, $alpha: 0.5);
-        }
+      &:nth-child(2n-1) {
+        background-color: rgba($color: $color-gray, $alpha: 0.5);
+      }
 
-        &:nth-child(3n) {
-          background-color: rgba($color: $color-purple, $alpha: 0.5);
-        }
+      &:nth-child(3n) {
+        background-color: rgba($color: $color-purple, $alpha: 0.5);
+      }
 
-        p.box-title {
-          color: rgba($color: $color-font, $alpha: 1);
-          text-shadow: 0 -2px rgba($color: $color-dark, $alpha: 0.2);
-        }
+      p.box-title {
+        color: rgba($color: $color-font, $alpha: 1);
+        text-shadow: 0 -2px rgba($color: $color-dark, $alpha: 0.2);
       }
     }
   }
 }
-
 section.dropdown-section {
   @include section-style;
   align-items: flex-start;
@@ -644,13 +642,13 @@ section.dropdown-section {
     background: rgba($color: $color-gray, $alpha: 1);
     border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
     border-radius: 8px;
-    padding: .375rem;
+    padding: 0.375rem;
     margin-right: 4rem;
 
     button.dropdown-section-button {
       background: transparent;
       // padding: .375rem;
-      font-family: 'Samim';
+      font-family: "Samim";
       border: 0;
       width: 100%;
       color: rgba($color: $color-gray-4, $alpha: 1);
@@ -661,14 +659,12 @@ section.dropdown-section {
     }
   }
 
-
   ul.dropdown-section__list {
     flex-direction: column;
     width: 150px;
-    transition: display .3s ease-in;
+    transition: display 0.3s ease-in;
     margin-right: 4rem;
-    
-    
+
     li.dropdown-section__list-item {
       background-color: rgba($color: $color-gray, $alpha: 1);
       padding: 1rem;
@@ -678,13 +674,13 @@ section.dropdown-section {
       text-overflow: ellipsis;
       overflow: hidden;
       padding: 0.375rem;
-      
-      &:first-child{
+
+      &:first-child {
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
       }
-      
-      &:last-child{
+
+      &:last-child {
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
       }
@@ -693,7 +689,7 @@ section.dropdown-section {
         background-color: rgba($color: $color-purple, $alpha: 0.5);
       }
 
-      &:hover>a.dropdown-section__list-item-link  {
+      &:hover > a.dropdown-section__list-item-link {
         color: rgba($color: $color-light, $alpha: 1);
       }
 
